[add] palindromo code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body style="text-align: center; font-family: Arial, Helvetica, sans-serif;">
 
   <h1>Palindromi</h1>
+  <h3 id="outputPal"></h3>
+
+
 
   <h1>Pari o Dispari</h1>
   <button id="btn">Gioca!</button>
